--- a/Clase/index.html
+++ b/Clase/index.html
@@ -9,7 +9,7 @@
 <body>
     <center><H1>Sitios Turisticos del Ecuador</H1></center>
     <h2>Tren por el Ecuador</h2>
-    <p>Este feriado súbete a bordo de Tren Ecuador
+    <p>Este <strong>feriado</strong> súbete a bordo de Tren Ecuador
 
         Dos salidas especiales con locomotora a vapor en el Tren de Los Volcanes y el Tren de la Libertad II, y espacios extras en el Tren del Hielo para esta Semana Santa. Tren Ecuador le espera en el feriado del viernes 25 al domingo 27 de marzo para que disfrute de Ecuador de una manera diferente.
         
@@ -28,7 +28,7 @@
         Ferrocarriles del Ecuador EP</p>
     <center><img src="Imagenes/Tren.jpg" alt="200" height="200"></center>
     <h2>Islas Galápagos</h2>
-    <p>Las Islas Galápagos, ubicadas en el océano Pacífico aproximadamente a 621 millas (1,000 kilómetros) de la costa de Ecuador, son un destino turístico de renombre mundial. Este archipiélago volcánico es famoso por su biodiversidad única y su papel crucial en la teoría de la evolución de Charles Darwin.
+    <p>Las Islas Galápagos, <strong>ubicadas en el océano Pacífico aproximadamente a 621 millas (1,000 kilómetros) de la costa de Ecuador</strong>, son un destino turístico de renombre mundial. Este archipiélago volcánico es famoso por su biodiversidad única y su papel crucial en la teoría de la evolución de Charles Darwin.
 
         Los visitantes de las Galápagos tienen la oportunidad única de explorar paisajes espectaculares, como playas de arena blanca, acantilados escarpados, manglares e incluso volcanes activos. Las actividades populares incluyen el buceo y el esnórquel para observar la increíble vida marina, la observación de aves en los distintos hábitats del archipiélago y el senderismo a través de paisajes asombrosos.
         
