--- a/Clase/Clase 1/index.html
+++ b/Clase/Clase 1/index.html
@@ -24,6 +24,7 @@
 
     </nav>       
     Buscar: <input type="text" name="Buscar" id="Buscar">
+    <button id="feriado">Buscar</button>
         <section>
             <p class="destacado">Tren por el Ecuador</p>
             <p>Este <strong>feriado</strong> súbete a bordo de Tren Ecuador
