--- a/Prueba/Tienda.html
+++ b/Prueba/Tienda.html
@@ -18,8 +18,7 @@
 
 
     <div class="container">
-        <as
-        ide class="sidebar">
+        <as class="sidebar">
             <h2><i>Categorias</i></h2>
             <input type="submit" value="Ropa" class="formulario_cate">
             <br>
@@ -72,18 +71,24 @@
             </div>
             </div>
 
-
+            <aside class="asai">
+                <h1>Servicio al cliente</h1>
+                <img src="Image/robo.png" alt="" height="200"> <br>
+                <input type="text" class="textoooo" placeholder="Escribir"> 
+                <a href="fomrs.html" class="enviar">Ver tablas</a>
+    
+    
+            </aside>
 
         </div>
    
-    </div>
 
     <div class="pie">
-        <p>resdes sociales</p>
-        <p>Tienda de telefonos</p>
-        <p>direcion</p>
+        <a href="https://www.facebook.com"><img src="Image/fblogo.png" alt="" height="50">Facebook</a>
+        <a href="https://www.instagram.com"><img src="Image/iglogo.png" alt="" height="50">Instagram</a>
+        <a href="https://www.whatsapp.com"><img src="Image/wplogo.png" alt="" height="50">WhatsApp</a>
+
         <br>
-        <a href="" class="">Ver tablas</a>
     </div>
     <footer class="pie">
         <a href="fomrs.html" class="formulario_submit">Ver tablas</a>
