--- a/Prueba/fomrs.html
+++ b/Prueba/fomrs.html
@@ -48,23 +48,18 @@
             </tr>
         </table>
 
-        <aside class="asai">
-            <h1>Servicio al cliente</h1>
-            <img src="Image/robo.png" alt="" height="200">
-            <input type="text">
 
-        </aside>
     </div>
 
 
 
-    <footer class="pie">
-        <p>resdes sociales</p>
-        <p>Tienda de telefonos</p> <br>
-        <p>direcion</p>
+    <div class="pie">
+        <a href="https://www.facebook.com"><img src="Image/fblogo.png" alt="" height="50">Facebook</a>
+        <a href="https://www.instagram.com"><img src="Image/iglogo.png" alt="" height="50">Instagram</a>
+        <a href="https://www.whatsapp.com"><img src="Image/wplogo.png" alt="" height="50">WhatsApp</a>
+
         <br>
-        <br>
-    </footer>
+    </div>
 
 </body>
 
