--- a/Deberes/Parcial 1/Card/index.html
+++ b/Deberes/Parcial 1/Card/index.html
@@ -11,7 +11,7 @@
         <img src="Image/adidas.png" alt="" >
         <p>Detalles</p>
         <div class="card-head">
-            <h1><span class="product-name">Adidas Original</span><span class="product-price">$39</span></h1>            <div class="card-body">
+            <h1><span class="product-name">Adidas Original</span><span class="product-price">$39</span></h1>            
                 <div class="card-body">
                     <div class="card-content">
                         <h4>Men's running shirt</h4>
