--- a/Animaciones/index.html
+++ b/Animaciones/index.html
@@ -21,7 +21,7 @@
 
     <div class="container">
         <div class="moving-bar"></div>
-        <div class="bolu="></div>
+        <div class="ponk"></div>
     </div>
 </body>
 </html>
